--- a/src/common/stylus/variable.styl
+++ b/src/common/stylus/variable.styl
@@ -13,7 +13,7 @@ $color-text-ll = rgba(255, 255, 255, 0.8)
 
 //字体定义规范
 $font-size-samll-s = 10px
-$font-size-samll = 12px
+$font-size-small = 12px
 $font-size-medium = 14px
 $font-size-medium-x = 16px
 $font-size-large = 18px
