--- a/src/common/stylus/mixin.styl
+++ b/src/common/stylus/mixin.styl
@@ -1,5 +1,5 @@
 //背景图片
-bg-imgge($url)
+bg-image($url)
   background-image: url($url + "@2.png")
   @media (-webkit-min-device-pixel-ratio: 3),(min-device-pixel-ratio: 3)
     background-image: url($url + "@3x.png")
